force-app/main/default/objects/Referral__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the patient account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral (Account)</relationshipLabel>
    <relationshipName>Referral1</relationshipName>
    <type>Lookup</type>
</CustomField>