force-app/main/default/objects/Referral__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The fields is used to link the referral with the care episode</description>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>