force-app/main/default/objects/Referral__c/fields/Email_CTM__c.field-meta.xml
<CustomField>
    <fullName>Email_CTM__c</fullName>
    <description>This field is used to get the email of the care team member</description>
    <label>Email (CTM)</label>
    <type>Email</type>
</CustomField>