force-app/main/default/objects/Referral__c/fields/Email_Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Referred_To__c</fullName>
    <description>To get the email from the selected referred out organization</description>
    <label>Email (Referred To)</label>
    <type>Email</type>
</CustomField>