force-app/main/default/objects/Referral__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>The field is used to fill the referral instructions</description>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>