force-app/main/default/objects/Referral__c/fields/Phone_CTM__c.field-meta.xml
<CustomField>
    <fullName>Phone_CTM__c</fullName>
    <description>This field is used to get the phone of the care team member</description>
    <label>Phone (CTM)</label>
    <type>Phone</type>
</CustomField>