force-app/main/default/objects/Referral__c/fields/Phone_Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Phone_Referred_To__c</fullName>
    <description>This field to get the phone from the selected Referred out Organization</description>
    <label>Phone (Referred To)</label>
    <type>Phone</type>
</CustomField>