force-app/main/default/objects/Referral__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the Active care episode location</description>
    <label>Location</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>