force-app/main/default/objects/Referral__c/fields/Reasons_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Referral__c</fullName>
    <description>This field will be used to save the reason for referring</description>
    <label>Reasons for Referral</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>