force-app/main/default/objects/Referral__c/fields/Referred_Out_Organization__c.field-meta.xml
<CustomField>
    <fullName>Referred_Out_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Referral Partner Account</description>
    <label>Referred Out Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>