force-app/main/default/objects/Referral__c/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to contact to choose the contacts related to the selected Referred Out Organization</description>
    <label>Referred To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>