force-app/main/default/objects/Referral__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to get the care team member or logged in user</description>
    <label>Care Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>